--- a/views/contact.jade
+++ b/views/contact.jade
@@ -3,10 +3,9 @@ html(style='font-size: 16px;')
   head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(charset='utf-8')
-    meta(name='keywords' content='OUR APP NAME')
     meta(name='description' content='')
     meta(name='page_type' content='np-template-header-footer-from-plugin')
-    title Home
+    title Contact
     link(rel='stylesheet' href='nicepage.css' media='screen')
     link(rel='stylesheet' href='Home.css' media='screen')
     script(class='u-script' type='text/javascript' src='jquery-1.9.1.min.js' defer='')
@@ -22,7 +21,7 @@ html(style='font-size: 16px;')
       "logo": "/images/runX-logos_transparent.png"
       }
     meta(name='theme-color' content='#478ac9')
-    meta(property='og:title' content='Home')
+    meta(property='og:title' content='Contact')
     meta(property='og:type' content='website')
   body.u-body
     header#sec-aaab.u-clearfix.u-header.u-header
@@ -58,11 +57,7 @@ html(style='font-size: 16px;')
             .u-black.u-menu-overlay.u-opacity.u-opacity-70
     section.u-align-center.u-clearfix.u-image.u-shading.u-section-1(id='carousel_36f4' data-image-width='1280' data-image-height='853')
       .u-clearfix.u-sheet.u-sheet-1
-        img.u-image.u-image-default.u-image-1(src='images/runX-logos_transparent.png' alt='' data-image-width='1080' data-image-height='1080')
-        //h1.u-custom-font.u-font-lato.u-text.u-text-body-alt-color.u-text-1 PECI
-        h3.u-text.u-text-body-alt-color.u-text-2 REMOTE AND INDIVIDUAL PHYSICAL EXERCISE SUPPORT SYSTEM
-        p.u-text.u-text-body-alt-color.u-text-3 With the context of the COVID-19 pandemic in mind, this project seeks to provide support to those who are working out at home or people that are looking to take that first step
     footer#sec-5646.u-align-center.u-clearfix.u-footer.u-grey-80.u-footer
       .u-clearfix.u-sheet.u-sheet-1
-        //p.u-small-text.u-text.u-text-variant.u-text-1 This website serves to present our project, runX, made for the PECI course
+          //p.u-small-text.u-text.u-text-variant.u-text-1 This website serves to present our project, runX, made for the PECI course
         p.u-text.u-text-body-alt-color.u-text-3 This website serves to present our project, runX, made for the PECI course
