--- a/public/Home.css
+++ b/public/Home.css
@@ -15,7 +15,7 @@
 .u-section-1 .u-image-1 {
   width: 300px;
   height: 202px;
-  margin: 74px auto 0;
+  margin: 94px auto 0;
 }
 
 .u-section-1 .u-text-1 {
@@ -39,8 +39,9 @@
   line-height: 1.4;
   font-weight: 300;
   width: 839px;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   text-transform: none;
+  font-weight: 500;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
   margin: 22px auto 0;
 }
@@ -48,7 +49,7 @@
 .u-section-1 .u-text-3 {
   letter-spacing: 2px;
   font-size: 1rem;
-  width: 409px;
+  width: 580px;
   text-transform: none;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
   margin: 31px auto 60px;
