added about us page, minor changes

--- a/views/home.jade
+++ b/views/home.jade
@@ -45,7 +45,7 @@ html(style='font-size: 16px;')
               li.u-nav-item
                 a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/' style='padding: 10px 20px;') Home
               li.u-nav-item
-                a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='contact' style='padding: 10px 20px;') Contact
+                a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/about' style='padding: 10px 20px;') About us
           .u-custom-menu.u-nav-container-collapse
             .u-black.u-container-style.u-inner-container-layout.u-opacity.u-opacity-95.u-sidenav
               .u-inner-container-layout.u-sidenav-overflow
@@ -54,7 +54,7 @@ html(style='font-size: 16px;')
                   li.u-nav-item
                     a.u-button-style.u-nav-link(href='/' style='padding: 10px 20px;') Home
                   li.u-nav-item
-                    a.u-button-style.u-nav-link(href='contact' style='padding: 10px 20px;') Contact
+                    a.u-button-style.u-nav-link(href='/about' style='padding: 10px 20px;') About us
             .u-black.u-menu-overlay.u-opacity.u-opacity-70
     section.u-align-center.u-clearfix.u-image.u-shading.u-section-1(id='carousel_36f4' data-image-width='1280' data-image-height='853')
       .u-clearfix.u-sheet.u-sheet-1
