--- a/views/contact.jade
+++ b/views/contact.jade
@@ -3,22 +3,22 @@ html(style='font-size: 16px;')
   head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(charset='utf-8')
+    meta(name='keywords' content='About Us')
     meta(name='description' content='')
     meta(name='page_type' content='np-template-header-footer-from-plugin')
     title Contact
     link(rel='stylesheet' href='nicepage.css' media='screen')
-    link(rel='stylesheet' href='Home.css' media='screen')
+    link(rel='stylesheet' href='Contact.css' media='screen')
     script(class='u-script' type='text/javascript' src='jquery-1.9.1.min.js' defer='')
     script(class='u-script' type='text/javascript' src='nicepage.js' defer='')
     meta(name='generator' content='Nicepage 3.29.3, nicepage.com')
     link#u-theme-google-font(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i')
-    link#u-page-google-font(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i')
     script(type='application/ld+json').
       {
       "@context": "http://schema.org",
       "@type": "Organization",
       "name": "",
-      "logo": "/images/runX-logos_transparent.png"
+      "logo": "images/runX-logos_transparent.png"
       }
     meta(name='theme-color' content='#478ac9')
     meta(property='og:title' content='Contact')
@@ -27,7 +27,7 @@ html(style='font-size: 16px;')
     header#sec-aaab.u-clearfix.u-header.u-header
       .u-clearfix.u-sheet.u-sheet-1
         a.u-image.u-logo.u-image-1(href='/' data-image-width='1080' data-image-height='1080' title='home')
-          img.u-logo-image.u-logo-image-1(src='/images/runX-logos_transparent.png')
+          img.u-logo-image.u-logo-image-1(src='images/runX-logos_transparent.png')
         nav.u-menu.u-menu-dropdown.u-offcanvas.u-menu-1
           .menu-collapse(style='font-size: 1rem; letter-spacing: 0px;')
             a.u-button-style.u-custom-left-right-menu-spacing.u-custom-padding-bottom.u-custom-top-bottom-menu-spacing.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='#')
@@ -44,7 +44,7 @@ html(style='font-size: 16px;')
               li.u-nav-item
                 a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/' style='padding: 10px 20px;') Home
               li.u-nav-item
-                a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='contact' style='padding: 10px 20px;') Contact
+                a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/about' style='padding: 10px 20px;') About us
           .u-custom-menu.u-nav-container-collapse
             .u-black.u-container-style.u-inner-container-layout.u-opacity.u-opacity-95.u-sidenav
               .u-inner-container-layout.u-sidenav-overflow
@@ -53,11 +53,54 @@ html(style='font-size: 16px;')
                   li.u-nav-item
                     a.u-button-style.u-nav-link(href='/' style='padding: 10px 20px;') Home
                   li.u-nav-item
-                    a.u-button-style.u-nav-link(href='contact' style='padding: 10px 20px;') Contact
+                    a.u-button-style.u-nav-link(href='/about' style='padding: 10px 20px;') About us
             .u-black.u-menu-overlay.u-opacity.u-opacity-70
-    section.u-align-center.u-clearfix.u-image.u-shading.u-section-1(id='carousel_36f4' data-image-width='1280' data-image-height='853')
-      .u-clearfix.u-sheet.u-sheet-1
+    section#sec-3981.u-clearfix.u-section-1
+      .u-clearfix.u-expanded-width.u-gutter-0.u-layout-wrap.u-layout-wrap-1
+        .u-gutter-0.u-layout
+          .u-layout-row
+            .u-container-style.u-image.u-layout-cell.u-size-60.u-image-1(data-image-width='1280' data-image-height='853')
+              .u-container-layout.u-container-layout-1
+                h2.u-text.u-text-default.u-text-1 About Us
+                .u-container-style.u-group.u-shape-rectangle.u-group-1
+                  .u-container-layout
+                    .u-image.u-image-circle.u-image-2(alt='' src='' data-image-width='256' data-image-height='256')
+                    p.u-text.u-text-body-alt-color.u-text-default.u-text-2 Name
+                      br
+                      | UA ECT
+                      br
+                      | email
+                      br
+                    p.u-text.u-text-body-alt-color.u-text-default.u-text-3 Name
+                      br
+                      | UA ECT
+                      br
+                      | email
+                      br
+                    .u-image.u-image-circle.u-image-3(alt='' src='' data-image-width='256' data-image-height='256')
+                    p.u-text.u-text-body-alt-color.u-text-default.u-text-4 Name
+                      br
+                      | UA ECT
+                      br
+                      | email
+                      br
+                    .u-image.u-image-circle.u-image-4(alt='' src='' data-image-width='256' data-image-height='256')
+                    p.u-text.u-text-body-alt-color.u-text-default.u-text-5 Name
+                      br
+                      | UA ECT
+                      br
+                      | email
+                      br
+                    .u-image.u-image-circle.u-image-5(alt='' src='' data-image-width='256' data-image-height='256')
+                    p.u-text.u-text-body-alt-color.u-text-default.u-text-6 Name
+                      br
+                      | UA ECT
+                      br
+                      | email
+                      br
+                    .u-image.u-image-circle.u-image-6(alt='' src='' data-image-width='256' data-image-height='256')
+                p.u-text.u-text-7 Sample text. ​Click to select the text box. Click again or double click to start editing the text.
     footer#sec-5646.u-align-center.u-clearfix.u-footer.u-grey-80.u-footer
       .u-clearfix.u-sheet.u-sheet-1
-          //p.u-small-text.u-text.u-text-variant.u-text-1 This website serves to present our project, runX, made for the PECI course
         p.u-text.u-text-body-alt-color.u-text-3 This website serves to present our project, runX, made for the PECI course
+
