--- a/public/Contact.css
+++ b/public/Contact.css
@@ -1,5 +1,10 @@
 .u-section-1 {
-  min-height: 856px;
+  background-image: linear-gradient(rgba(48, 3, 252, 0.4), rgba(153, 7, 250, 0.4)),
+  url("images/nelson-ndongala-N_5HGZdo4QU-unsplash.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
 .u-section-1 .u-layout-wrap-1 {
@@ -18,7 +23,10 @@
 }
 
 .u-section-1 .u-text-1 {
+  color: #FFFFFFFF;
   margin: 115px auto 0 104px;
+  margin-left: 7%;
+  font-weight: 700;
 }
 
 .u-section-1 .u-group-1 {
@@ -88,7 +96,11 @@
 }
 
 .u-section-1 .u-text-7 {
+  color: #FFFFFFFF;
   margin: -588px 941px 0 163px;
+  margin-left: 10%;
+  width: 1000px;
+  font-weight: 700;
 }
 
 @media (max-width: 1199px) {
@@ -132,7 +144,13 @@
 
   .u-section-1 .u-text-7 {
     margin-right: 504px;
+    margin-left: 10%;
   }
+}
+
+ul.first{
+  margin-left: 10%;
+  font-weight: 700;
 }
 
 @media (max-width: 575px) {
