--- a/views/contact.jade
+++ b/views/contact.jade
@@ -64,43 +64,32 @@ html(style='font-size: 16px;')
                 h2.u-text.u-text-default.u-text-1 About Us
                 .u-container-style.u-group.u-shape-rectangle.u-group-1
                   .u-container-layout
-                    .u-image.u-image-circle.u-image-2(alt='' src='' data-image-width='256' data-image-height='256')
-                    p.u-text.u-text-body-alt-color.u-text-default.u-text-2 Name
-                      br
-                      | UA ECT
-                      br
-                      | email
-                      br
-                    p.u-text.u-text-body-alt-color.u-text-default.u-text-3 Name
-                      br
-                      | UA ECT
-                      br
-                      | email
-                      br
-                    .u-image.u-image-circle.u-image-3(alt='' src='' data-image-width='256' data-image-height='256')
-                    p.u-text.u-text-body-alt-color.u-text-default.u-text-4 Name
-                      br
-                      | UA ECT
-                      br
-                      | email
-                      br
-                    .u-image.u-image-circle.u-image-4(alt='' src='' data-image-width='256' data-image-height='256')
-                    p.u-text.u-text-body-alt-color.u-text-default.u-text-5 Name
-                      br
-                      | UA ECT
-                      br
-                      | email
-                      br
-                    .u-image.u-image-circle.u-image-5(alt='' src='' data-image-width='256' data-image-height='256')
-                    p.u-text.u-text-body-alt-color.u-text-default.u-text-6 Name
-                      br
-                      | UA ECT
-                      br
-                      | email
-                      br
-                    .u-image.u-image-circle.u-image-6(alt='' src='' data-image-width='256' data-image-height='256')
-                p.u-text.u-text-7 Sample text. ​Click to select the text box. Click again or double click to start editing the text.
+                    //.u-image.u-image-circle.u-image-2(alt='' src='' data-image-width='256' data-image-height='256')
+                    //p.u-text.u-text-body-alt-color.u-text-default.u-text-2 Name
+                      //br
+                      //| UA ECT
+                      //br
+                      //| email
+                      //br
+                p.u-text.u-text-7 We are students of LECI, currently taking the PECI course. You can contact us through any of the emails listed below.
+                br
+                ul.first(style='color:White')
+                  li António Ferreira
+                    ul(style='font-weight: 550')
+                      li ajferreira@ua.pt
+                  li Diogo Maduro
+                    ul(style='font-weight: 550')
+                      li diogomaduro97@ua.pt
+                  li Filipe Pires
+                    ul(style='font-weight: 550')
+                      li filipeadao@ua.pt
+                  li Francisco Teixeira
+                    ul(style='font-weight: 550')
+                      li franciscosalesteixeira88@ua.pt
+                  li Luís Couto
+                    ul(style='font-weight: 550')
+                      li luiscouto10@ua.pt
+                  
     footer#sec-5646.u-align-center.u-clearfix.u-footer.u-grey-80.u-footer
       .u-clearfix.u-sheet.u-sheet-1
         p.u-text.u-text-body-alt-color.u-text-3 This website serves to present our project, runX, made for the PECI course
-
