--- a/views/home.jade
+++ b/views/home.jade
@@ -19,7 +19,7 @@ html(style='font-size: 16px;')
       "@context": "http://schema.org",
       "@type": "Organization",
       "name": "",
-      "logo": "/images/runX-logos_transparent.png"
+      "logo": "/images/runX-ite.png"
       }
     meta(name='theme-color' content='#478ac9')
     meta(property='og:title' content='Home')
@@ -58,7 +58,7 @@ html(style='font-size: 16px;')
             .u-black.u-menu-overlay.u-opacity.u-opacity-70
     section.u-align-center.u-clearfix.u-image.u-shading.u-section-1(id='carousel_36f4' data-image-width='1280' data-image-height='853')
       .u-clearfix.u-sheet.u-sheet-1
-        img.u-image.u-image-default.u-image-1(src='images/runX-logos_transparent.png' alt='' data-image-width='1080' data-image-height='1080')
+        img.u-image.u-image-default.u-image-1(src='images/runX-logos_white.png' alt='' data-image-width='1080' data-image-height='1080')
         //h1.u-custom-font.u-font-lato.u-text.u-text-body-alt-color.u-text-1 PECI
         h3.u-text.u-text-body-alt-color.u-text-2 REMOTE AND INDIVIDUAL PHYSICAL EXERCISE SUPPORT SYSTEM
         p.u-text.u-text-body-alt-color.u-text-3 With the context of the COVID-19 pandemic in mind, this project seeks to provide support to those who are working out at home or people that are looking to take that first step
