Minor touch-ups before Info page

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -44,6 +44,8 @@ html(style='font-size: 16px;')
               li.u-nav-item
                 a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/' style='padding: 10px 20px;') Home
               li.u-nav-item
+                a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/info' style='padding: 10px 20px;') Info
+              li.u-nav-item
                 a.u-button-style.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='/about' style='padding: 10px 20px;') About us
           .u-custom-menu.u-nav-container-collapse
             .u-black.u-container-style.u-inner-container-layout.u-opacity.u-opacity-95.u-sidenav
@@ -52,6 +54,8 @@ html(style='font-size: 16px;')
                 ul.u-align-center.u-nav.u-popupmenu-items.u-unstyled.u-nav-2
                   li.u-nav-item
                     a.u-button-style.u-nav-link(href='/' style='padding: 10px 20px;') Home
+                  li.u-nav-item
+                    a.u-button-style.u-nav-link(href='/info' style='padding: 10px 20px;') Info
                   li.u-nav-item
                     a.u-button-style.u-nav-link(href='/about' style='padding: 10px 20px;') About us
             .u-black.u-menu-overlay.u-opacity.u-opacity-70
@@ -89,7 +93,12 @@ html(style='font-size: 16px;')
                   li Luís Couto
                     ul(style='font-weight: 550')
                       li luiscouto10@ua.pt
-                  
+                  br
+                  li Our advisors:
+                    ul(style='font-weight: 550')
+                      li Prof. Rui Aguiar
+                      li Prof. Mário Antunes
+                                    
     footer#sec-5646.u-align-center.u-clearfix.u-footer.u-grey-80.u-footer
       .u-clearfix.u-sheet.u-sheet-1
         p.u-text.u-text-body-alt-color.u-text-3 This website serves to present our project, runX, made for the PECI course
