--- a/views/info.jade
+++ b/views/info.jade
@@ -3,32 +3,31 @@ html(style='font-size: 16px;')
   head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(charset='utf-8')
-    meta(name='keywords' content='OUR APP NAME')
+    meta(name='keywords' content='Info')
     meta(name='description' content='')
     meta(name='page_type' content='np-template-header-footer-from-plugin')
-    title Home
+    title Contact
     link(rel='stylesheet' href='nicepage.css' media='screen')
-    link(rel='stylesheet' href='Home.css' media='screen')
+    link(rel='stylesheet' href='Info.css' media='screen')
     script(class='u-script' type='text/javascript' src='jquery-1.9.1.min.js' defer='')
     script(class='u-script' type='text/javascript' src='nicepage.js' defer='')
     meta(name='generator' content='Nicepage 3.29.3, nicepage.com')
     link#u-theme-google-font(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i')
-    link#u-page-google-font(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i')
     script(type='application/ld+json').
       {
       "@context": "http://schema.org",
       "@type": "Organization",
       "name": "",
-      "logo": "/images/runX-white.png"
+      "logo": "images/runX-logos_transparent.png"
       }
     meta(name='theme-color' content='#478ac9')
-    meta(property='og:title' content='Home')
+    meta(property='og:title' content='Contact')
     meta(property='og:type' content='website')
   body.u-body
     header#sec-aaab.u-clearfix.u-header.u-header
       .u-clearfix.u-sheet.u-sheet-1
         a.u-image.u-logo.u-image-1(href='/' data-image-width='1080' data-image-height='1080' title='home')
-          img.u-logo-image.u-logo-image-1(src='/images/runX-logos_transparent.png')
+          img.u-logo-image.u-logo-image-1(src='images/runX-logos_transparent.png')
         nav.u-menu.u-menu-dropdown.u-offcanvas.u-menu-1
           .menu-collapse(style='font-size: 1rem; letter-spacing: 0px;')
             a.u-button-style.u-custom-left-right-menu-spacing.u-custom-padding-bottom.u-custom-top-bottom-menu-spacing.u-nav-link.u-text-active-palette-1-base.u-text-hover-palette-2-base(href='#')
@@ -56,18 +55,21 @@ html(style='font-size: 16px;')
                   li.u-nav-item
                     a.u-button-style.u-nav-link(href='/' style='padding: 10px 20px;') Home
                   li.u-nav-item
-                    a.u-button-style.u-nav-link(href='/info' style='padding: 10px 20px;') Info
+                    a.u-button-style.u-nav-link(href='/' style='padding: 10px 20px;') Info
                   li.u-nav-item
                     a.u-button-style.u-nav-link(href='/about' style='padding: 10px 20px;') About us
             .u-black.u-menu-overlay.u-opacity.u-opacity-70
-    section.u-align-center.u-clearfix.u-image.u-shading.u-section-1(id='carousel_36f4' data-image-width='1280' data-image-height='853')
-      .u-clearfix.u-sheet.u-sheet-1
-        img.u-image.u-image-default.u-image-1(src='images/runX-logos_white.png' alt='' data-image-width='1080' data-image-height='1080')
-        //h1.u-custom-font.u-font-lato.u-text.u-text-body-alt-color.u-text-1 PECI
-        h3.u-text.u-text-body-alt-color.u-text-2 REMOTE AND INDIVIDUAL PHYSICAL EXERCISE SUPPORT SYSTEM
-        br
-        p.u-text.u-text-body-alt-color.u-text-3 With the context of the COVID-19 pandemic in mind, this project seeks to provide support to those who are working out at home or people that are looking to take that first step
+    section#sec-3981.u-clearfix.u-section-1
+      .u-clearfix.u-expanded-width.u-gutter-0.u-layout-wrap.u-layout-wrap-1
+        .u-gutter-0.u-layout
+          .u-layout-row
+            .u-container-style.u-image.u-layout-cell.u-size-60.u-image-1(data-image-width='1280' data-image-height='853')
+              .u-container-layout.u-container-layout-1
+                h2.u-text.u-text-default.u-text-1
+                .u-container-style.u-group.u-shape-rectangle.u-group-1
+                  .u-container-layout
+                p.u-text.u-text-7
+                                    
     footer#sec-5646.u-align-center.u-clearfix.u-footer.u-grey-80.u-footer
       .u-clearfix.u-sheet.u-sheet-1
-        //p.u-small-text.u-text.u-text-variant.u-text-1 This website serves to present our project, runX, made for the PECI course
         p.u-text.u-text-body-alt-color.u-text-3 This website serves to present our project, runX, made for the PECI course
